# dynamo-io

./: .gitignore  .gitlab-ci.yml  .mypy.ini  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
dynamo_io/: __init__.py  _deserializer.py  _serializer.py  definitions.py  reader.py  writer.py
dynamo_io/mock/: __init__.py  _comparisons.py  _conditioner.py  _expressions.py  _paginators.py  _tables.py
dynamo_io/recorder/: __init__.py
dynamo_io/tests/: fixtures.py  test_io.py
dynamo_io/tests/mock/: test_formatting.py  test_mocking.py  test_mocking_records.py
dynamo_io/tests/mock/expressions/: test_get_clause.py  test_parse_sets.py
dynamo_io/tests/reader/: test_get_indexed_record.py  test_get_record.py  test_get_records_for_partition.py
dynamo_io/tests/recorder/: test_deserializer_deserialize.py  test_record_class.py  test_serializer_serialize.py
dynamo_io/tests/writer/: test_insert_records.py  test_transacts.py  test_upsert.py
