[tool.poetry]
name = "dynamo-io"
version = "0.3.0"
description = "Opinionated single-table library for DynamoDB with in-memory mocking capabilities for unit and scenario testing."
authors = ["Scott Ernst <swernst@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
boto3 = "^1.17.21"
toml = ">=0.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
coverage = "*"
black = { version = "*", allow-prereleases = true }
pytest-cov = "*"
flake8 = "*"
flake8-black = "*"
mypy = ">=0.900"
taskipy = ">=1.4.0"
aok = "*"
radon = "^5.1.0"

[tool.taskipy.tasks]
# https://github.com/illBeRoy/taskipy
black = "black ."
mypy = "mypy . --install-types --non-interactive --ignore-missing-imports"
flake8 = "flake8 ."
radon = "radon cc . && radon mi ."
test = "pytest . --cov-report=term-missing --cov=."
lint = "task black && task flake8 && task mypy"
check = "task black && task flake8 && task mypy && task radon && task test"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
